--- a/ionic/elektron/www/index.html
+++ b/ionic/elektron/www/index.html
@@ -23,8 +23,11 @@
     <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
 
     <!-- your app's js -->
-    <script src="js/chart.js"></script>
-    <script src="js/angular-chart.js"></script>
+    <!--<script src="js/chart.js"></script>-->
+    <script src="js/Charts.js"></script>
+    <!--<script src="js/angular-chart.js"></script>-->
+    <script src="js/angularmin.js"></script>
+    <script src="js/angularchart.js"></script>
     <script src="js/angular-websocket.min.js"></script>
 
     <script src="js/controllers.js"></script>
