--- a/ionic/elektron/www/index.html
+++ b/ionic/elektron/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/elektron.css" rel="stylesheet">
     <link href="css/custom-app.css" rel="stylesheet">
     <link rel="stylesheet" href="css/angular-chart.css">
 
@@ -33,6 +34,10 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/app.js"></script>
+
+    <!-- Date picker -->
+    <script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
+    <link href="lib/ion-datetime-picker/release/ion-datetime-picker.min.css" rel="stylesheet">
 
   </head>
 
