--- a/ionic/elektron/www/index.html
+++ b/ionic/elektron/www/index.html
@@ -41,7 +41,7 @@
 
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="starter" class="platform-android" >
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
