--- a/ionic/elektron/www/index.html
+++ b/ionic/elektron/www/index.html
@@ -19,6 +19,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
     <script src="cordova.js"></script>
     <!-- Obtener recursos de otro lado -->
     <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
