Quita de librerias al dope

--- a/web/elektron/index.html
+++ b/web/elektron/index.html
@@ -180,17 +180,20 @@
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="bower_components/seiyria-bootstrap-slider/js/bootstrap-slider.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+
 	<script src="bower_components/jquery.ui/ui/jquery.ui.core.js"></script>
 	<script src="bower_components/jquery.ui/ui/jquery.ui.widget.js"></script>
 	<script src="bower_components/jquery.ui/ui/jquery.ui.mouse.js"></script>
 	<script src="bower_components/jquery.ui/ui/jquery.ui.draggable.js"></script>
 	<script src="bower_components/jquery.ui/ui/jquery.ui.resizable.js"></script>
 	<script src="bower_components/jquery.easing/js/jquery.easing.js"></script>
+
 	<script src="bower_components/flot/jquery.flot.js"></script>
 	<script src="bower_components/flot/jquery.flot.stack.js"></script>
 	<script src="bower_components/flot/jquery.flot.pie.js"></script>
 	<script src="bower_components/flot/jquery.flot.resize.js"></script>
 	<script src="bower_components/flot.tooltip/js/jquery.flot.tooltip.js"></script>
+
 	<script src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
 	<script src="bower_components/moment/moment.js"></script>
 	<script src="bower_components/jqvmap/jqvmap/jquery.vmap.js"></script>
@@ -210,6 +213,7 @@
 	<script src="bower_components/ng-flow/dist/ng-flow.js"></script>
 	<script src="bower_components/enquire/dist/enquire.js"></script>
 	<script src="bower_components/shufflejs/dist/jquery.shuffle.js"></script>
+
 	<script src="bower_components/pnotify/pnotify.core.js"></script>
 	<script src="bower_components/pnotify/pnotify.buttons.js"></script>
 	<script src="bower_components/pnotify/pnotify.callbacks.js"></script>
@@ -217,6 +221,7 @@
 	<script src="bower_components/pnotify/pnotify.desktop.js"></script>
 	<script src="bower_components/pnotify/pnotify.history.js"></script>
 	<script src="bower_components/pnotify/pnotify.nonblock.js"></script>
+
 	<script src="bower_components/nanoscroller/bin/javascripts/jquery.nanoscroller.js"></script>
 	<script src="bower_components/angular-nanoscroller/scrollable.js"></script>
 	<script src="bower_components/rangy/rangy-core.min.js"></script>
@@ -260,12 +265,13 @@
   <!-- Elektron controllers -->
   <script src="scripts/demos/modules/components.js"></script>
   <script src="scripts/demos/modules/statistics.js"></script>
+
   <!-- /Elektron controllers -->
 
 
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
 	<script src="scripts/core/controllers/mainController.js"></script>
-	<script src="scripts/core/controllers/messagesController.js"></script>
+	<!--<script src="scripts/core/controllers/messagesController.js"></script>-->
 	<script src="scripts/core/controllers/navigationController.js"></script>
 	<script src="scripts/core/controllers/notificationsController.js"></script>
 	<script src="scripts/core/directives/directives.js"></script>
@@ -285,15 +291,15 @@
 	<script src="scripts/chart/morris.js"></script>
 	<script src="scripts/chart/sparklines.js"></script>
 	<script src="scripts/gallery/gallery.js"></script>
-	<script src="scripts/map/googleMaps.js"></script>
-	<script src="scripts/map/vectorMaps.js"></script>
+	<!--<script src="scripts/map/googleMaps.js"></script>
+	<script src="scripts/map/vectorMaps.js"></script>-->
 	<script src="scripts/demos/modules/basicTables.js"></script>
 	<script src="scripts/demos/modules/boxedLayout.js"></script>
 	<script src="scripts/demos/modules/calendar.js"></script>
 	<script src="scripts/demos/modules/canvasCharts.js"></script>
 	<script src="scripts/demos/modules/nvd3Charts.js"></script>
 	<script src="scripts/demos/modules/chatBox.js"></script>
-	<script src="scripts/demos/modules/editableTable.js"></script>
+	<!--<script src="scripts/demos/modules/editableTable.js"></script>-->
 	<script src="scripts/demos/modules/flotCharts.js"></script>
 	<script src="scripts/demos/modules/form/form.js"></script>
 	<script src="scripts/demos/modules/form/controllers/angularFormValidationController.js"></script>
@@ -304,7 +310,7 @@
 	<script src="scripts/demos/modules/form/controllers/inlineEditableController.js"></script>
 	<script src="scripts/demos/modules/form/controllers/timepickerDemoController.js"></script>
 	<script src="scripts/demos/modules/gallery.js"></script>
-	<script src="scripts/demos/modules/googleMaps.js"></script>
+	<!--<script src="scripts/demos/modules/googleMaps.js"></script>-->
 	<script src="scripts/demos/modules/horizontalLayout.js"></script>
 	<script src="scripts/demos/modules/mail/controllers/composeController.js"></script>
 	<script src="scripts/demos/modules/mail/controllers/inboxController.js"></script>
