Web- login -register -logo nuevo - index

--- a/web/elektron/index.html
+++ b/web/elektron/index.html
@@ -125,7 +125,7 @@
 						<form
 						ng-click="$event.stopPropagation()"
 						ng-submit="goToSearch()">
-							<input type="text" ng-model="searchQuery" class="search-query" placeholder="Type to filter..." />
+							<input type="text" ng-model="searchQuery" class="search-query" placeholder="Buscar funcionalidad..." />
 							<button type="submit" ng-click="goToSearch()"><i class="fa fa-binoculars"></i></button>
 						</form>
 		              </li>
@@ -312,9 +312,6 @@
 	<script src="scripts/demos/modules/gallery.js"></script>
 	<!--<script src="scripts/demos/modules/googleMaps.js"></script>-->
 	<script src="scripts/demos/modules/horizontalLayout.js"></script>
-	<script src="scripts/demos/modules/mail/controllers/composeController.js"></script>
-	<script src="scripts/demos/modules/mail/controllers/inboxController.js"></script>
-	<script src="scripts/demos/modules/mail/mail.js"></script>
 	<script src="scripts/demos/modules/morrisCharts.js"></script>
 	<script src="scripts/demos/modules/sparklineCharts.js"></script>
 	<script src="scripts/demos/modules/ngGrid.js"></script>
@@ -335,7 +332,6 @@
 	<script src="scripts/demos/modules/ui-components/controllers/slidersController.js"></script>
 	<script src="scripts/demos/modules/ui-components/controllers/tabsController.js"></script>
 	<script src="scripts/demos/modules/ui-components/controllers/tilesController.js"></script>
-	<script src="scripts/demos/modules/vectorMaps.js"></script>
 	<script src="scripts/demos/modules/dashboard.js"></script>
 	<script src="scripts/demos/demos.js"></script>
 	<script src="scripts/app.js"></script>
