--- a/web/elektron/index.html
+++ b/web/elektron/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Maverick">
 	<meta name="author" content="nDevr Studios & The Red Team">
 
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="favicon.ico">
 
 	<!-- prochtml:remove:dist -->
 	<link href="assets/less/styles.less" rel="stylesheet/less" media="all">
