--- a/web/elektron/index.html
+++ b/web/elektron/index.html
@@ -30,28 +30,46 @@
 
 	<!-- build:css assets/css/vendor.css -->
 	<!-- bower:css -->
-	<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
-	<link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css" />
-	<link rel="stylesheet" href="bower_components/angular-ui-tree/dist/angular-ui-tree.min.css" />
-	<link rel="stylesheet" href="bower_components/ng-grid/ng-grid.css" />
-	<link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />
+
+	<!--<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />-->
+
+	<!--<link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css" />-->
+	<!--<link rel="stylesheet" href="bower_components/angular-ui-tree/dist/angular-ui-tree.min.css" />-->
+
+	<!--<link rel="stylesheet" href="bower_components/ng-grid/ng-grid.css" />-->
+
+	<!--<link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />-->
+  <!--
 	<link rel="stylesheet" href="bower_components/iCheck/skins/all.css" />
+  -->
+  <!--
 	<link rel="stylesheet" href="bower_components/pnotify/pnotify.core.css" />
 	<link rel="stylesheet" href="bower_components/pnotify/pnotify.buttons.css" />
 	<link rel="stylesheet" href="bower_components/pnotify/pnotify.history.css" />
-	<link rel="stylesheet" href="bower_components/nanoscroller/bin/css/nanoscroller.css" />
-	<link rel="stylesheet" href="bower_components/textAngular/src/textAngular.css" />
+  -->
+
+  <!--<link rel="stylesheet" href="bower_components/textAngular/src/textAngular.css" />-->
 	<link rel="stylesheet" href="bower_components/angular-ui-grid/ui-grid.css" />
-	<link rel="stylesheet" href="bower_components/switchery/dist/switchery.css" />
-	<link rel="stylesheet" href="bower_components/ng-sortable/dist/ng-sortable.css" />
-	<link rel="stylesheet" href="bower_components/fullcalendar/fullcalendar.css" />
-	<link rel="stylesheet" href="bower_components/angular-meditor/dist/meditor.min.css" />
+
+  <!-- para los componentes draggables de las tareas -->
+  <link rel="stylesheet" href="bower_components/ng-sortable/dist/ng-sortable.css" />
+
+
+  <!--<link rel="stylesheet" href="bower_components/nanoscroller/bin/css/nanoscroller.css" />-->
+
+
+  <!--<link rel="stylesheet" href="bower_components/fullcalendar/fullcalendar.css" />-->
+	<!--<link rel="stylesheet" href="bower_components/switchery/dist/switchery.css" />-->
+
+	<!--<link rel="stylesheet" href="bower_components/angular-meditor/dist/meditor.min.css" />-->
 	<link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css" />
 	<link rel="stylesheet" href="bower_components/animate.css/animate.css" />
 	<link rel="stylesheet" href="bower_components/bootstrap-daterangepicker/daterangepicker-bs3.css" />
-	<link rel="stylesheet" href="bower_components/nvd3/src/nv.d3.css" />
+
+  <link rel="stylesheet" href="bower_components/nvd3/src/nv.d3.css" />
 	<link rel="stylesheet" href="bower_components/skylo/vendor/styles/skylo.css" />
-	<link rel="stylesheet" href="bower_components/bootstrap-datepaginator/dist/bootstrap-datepaginator.min.css" />
+
+  <link rel="stylesheet" href="bower_components/bootstrap-datepaginator/dist/bootstrap-datepaginator.min.css" />
 	<!-- endbower -->
 	<link rel='stylesheet' type='text/css' href='assets/fonts/glyphicons/css/glyphicons.min.css' />
 	<link rel='stylesheet' type='text/css' href='assets/plugins/form-fseditor/fseditor.css' />
@@ -158,7 +176,6 @@
 		</div>
 	</div>
 
-	<div ng-include="'views/layout/infobar.html'" class="infobar-wrapper"></div>
 
 	<!--[if lt IE 9]>
 	<script src="bower_components/es5-shim/es5-shim.js"></script>
@@ -172,34 +189,41 @@
 	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script src="bower_components/underscore/underscore.js"></script>
 	<script src="bower_components/angular/angular.js"></script>
+
 	<script src="bower_components/angular-resource/angular-resource.js"></script>
 	<script src="bower_components/angular-cookies/angular-cookies.js"></script>
 	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 	<script src="bower_components/angular-route/angular-route.js"></script>
 	<script src="bower_components/angular-animate/angular-animate.js"></script>
+
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="bower_components/seiyria-bootstrap-slider/js/bootstrap-slider.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
+<!--
 	<script src="bower_components/jquery.ui/ui/jquery.ui.core.js"></script>
+
 	<script src="bower_components/jquery.ui/ui/jquery.ui.widget.js"></script>
 	<script src="bower_components/jquery.ui/ui/jquery.ui.mouse.js"></script>
 	<script src="bower_components/jquery.ui/ui/jquery.ui.draggable.js"></script>
 	<script src="bower_components/jquery.ui/ui/jquery.ui.resizable.js"></script>
 	<script src="bower_components/jquery.easing/js/jquery.easing.js"></script>
-
+-->
 	<script src="bower_components/flot/jquery.flot.js"></script>
 	<script src="bower_components/flot/jquery.flot.stack.js"></script>
 	<script src="bower_components/flot/jquery.flot.pie.js"></script>
 	<script src="bower_components/flot/jquery.flot.resize.js"></script>
 	<script src="bower_components/flot.tooltip/js/jquery.flot.tooltip.js"></script>
-
+<!--
 	<script src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
+-->
 	<script src="bower_components/moment/moment.js"></script>
+
 	<script src="bower_components/jqvmap/jqvmap/jquery.vmap.js"></script>
 	<script src="bower_components/jqvmap/jqvmap/maps/jquery.vmap.world.js"></script>
 	<script src="bower_components/jqvmap/jqvmap/data/jquery.vmap.sampledata.js"></script>
-	<script src="bower_components/ng-grid/build/ng-grid.js"></script>
+
+  <script src="bower_components/ng-grid/build/ng-grid.js"></script>
 	<script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 	<script src="bower_components/iCheck/icheck.min.js"></script>
 	<script src="bower_components/google-code-prettify/src/prettify.js"></script>
@@ -215,30 +239,36 @@
 	<script src="bower_components/shufflejs/dist/jquery.shuffle.js"></script>
 
 	<script src="bower_components/pnotify/pnotify.core.js"></script>
+  <!--
 	<script src="bower_components/pnotify/pnotify.buttons.js"></script>
 	<script src="bower_components/pnotify/pnotify.callbacks.js"></script>
 	<script src="bower_components/pnotify/pnotify.confirm.js"></script>
 	<script src="bower_components/pnotify/pnotify.desktop.js"></script>
 	<script src="bower_components/pnotify/pnotify.history.js"></script>
 	<script src="bower_components/pnotify/pnotify.nonblock.js"></script>
-
+  -->
 	<script src="bower_components/nanoscroller/bin/javascripts/jquery.nanoscroller.js"></script>
 	<script src="bower_components/angular-nanoscroller/scrollable.js"></script>
-	<script src="bower_components/rangy/rangy-core.min.js"></script>
+
+  <script src="bower_components/rangy/rangy-core.min.js"></script>
 	<script src="bower_components/rangy/rangy-cssclassapplier.min.js"></script>
 	<script src="bower_components/rangy/rangy-selectionsaverestore.min.js"></script>
 	<script src="bower_components/rangy/rangy-serializer.min.js"></script>
+  <!--
 	<script src="bower_components/textAngular/src/textAngular.js"></script>
 	<script src="bower_components/textAngular/src/textAngular-sanitize.js"></script>
 	<script src="bower_components/textAngular/src/textAngularSetup.js"></script>
+  -->
 	<script src="bower_components/rangy/rangy-selectionsaverestore.js"></script>
+
 	<script src="bower_components/angular-ui-grid/ui-grid.js"></script>
 	<script src="bower_components/transitionize/dist/transitionize.js"></script>
 	<script src="bower_components/fastclick/lib/fastclick.js"></script>
 	<script src="bower_components/switchery/dist/switchery.js"></script>
+
 	<script src="bower_components/ng-switchery/src/ng-switchery.js"></script>
 	<script src="bower_components/ng-sortable/dist/ng-sortable.js"></script>
-	<script src="bower_components/angular-meditor/dist/meditor.min.js"></script>
+	<!--<script src="bower_components/angular-meditor/dist/meditor.min.js"></script>-->
 	<script src="bower_components/angular-ui-select/dist/select.js"></script>
 	<script src="bower_components/skycons/skycons.js"></script>
 	<script src="bower_components/angular-skycons/angular-skycons.js"></script>
@@ -251,8 +281,10 @@
 	<script src="bower_components/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
 	<script src="bower_components/jquery.easy-pie-chart/dist/angular.easypiechart.js"></script>
 	<script src="bower_components/bootstrap-datepaginator/dist/bootstrap-datepaginator.min.js"></script>
+  <!--
 	<script src="bower_components/velocity/velocity.js"></script>
 	<script src="bower_components/velocity/velocity.ui.js"></script>
+  -->
 	<!-- endbower -->
 
 	<script type='text/javascript' src='assets/plugins/form-colorpicker/js/bootstrap-colorpicker.min.js'></script>
@@ -271,69 +303,64 @@
 
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
 	<script src="scripts/core/controllers/mainController.js"></script>
-	<!--<script src="scripts/core/controllers/messagesController.js"></script>-->
 	<script src="scripts/core/controllers/navigationController.js"></script>
-	<script src="scripts/core/controllers/notificationsController.js"></script>
 	<script src="scripts/core/directives/directives.js"></script>
 	<script src="scripts/core/directives/form.js"></script>
 	<script src="scripts/core/directives/ui.js"></script>
+
 	<script src="scripts/core/modules/templateOverrides.js"></script>
 	<script src="scripts/core/modules/templates.js"></script>
-	<script src="scripts/core/modules/panels/ngDraggable.js"></script>
+
+  <script src="scripts/core/modules/panels/ngDraggable.js"></script>
 	<script src="scripts/core/modules/panels/panels.js"></script>
 	<script src="scripts/core/modules/panels/directives.js"></script>
+
 	<script src="scripts/core/services/services.js"></script>
 	<script src="scripts/core/services/theme.js"></script>
 	<script src="scripts/core/theme.js"></script>
-	<script src="scripts/calendar/calendar.js"></script>
-	<script src="scripts/chart/canvas.js"></script>
-	<script src="scripts/chart/flot.js"></script>
-	<script src="scripts/chart/morris.js"></script>
-	<script src="scripts/chart/sparklines.js"></script>
-	<script src="scripts/gallery/gallery.js"></script>
-	<!--<script src="scripts/map/googleMaps.js"></script>
-	<script src="scripts/map/vectorMaps.js"></script>-->
-	<script src="scripts/demos/modules/basicTables.js"></script>
-	<script src="scripts/demos/modules/boxedLayout.js"></script>
-	<script src="scripts/demos/modules/calendar.js"></script>
-	<script src="scripts/demos/modules/canvasCharts.js"></script>
-	<script src="scripts/demos/modules/nvd3Charts.js"></script>
-	<script src="scripts/demos/modules/chatBox.js"></script>
+
+	<!--<script src="scripts/chart/morris.js"></script>-->
+	<!--<script src="scripts/chart/sparklines.js"></script>-->
 	<!--<script src="scripts/demos/modules/editableTable.js"></script>-->
-	<script src="scripts/demos/modules/flotCharts.js"></script>
-	<script src="scripts/demos/modules/form/form.js"></script>
+
+  <script src="scripts/chart/canvas.js"></script>
+	<script src="scripts/chart/flot.js"></script>
+  <script src="scripts/demos/modules/calendar.js"></script>
+	<script src="scripts/demos/modules/nvd3Charts.js"></script>
+  <script src="scripts/demos/modules/canvasCharts.js"></script>
+  <script src="scripts/demos/modules/flotCharts.js"></script>
+
+
+  <script src="scripts/demos/modules/form/form.js"></script>
+
+
 	<script src="scripts/demos/modules/form/controllers/angularFormValidationController.js"></script>
 	<script src="scripts/demos/modules/form/controllers/datepickerDemoController.js"></script>
 	<script src="scripts/demos/modules/form/controllers/dateRangePickerDemoController.js"></script>
 	<script src="scripts/demos/modules/form/controllers/formComponentsController.js"></script>
-	<script src="scripts/demos/modules/form/controllers/imageCropController.js"></script>
+	<!--<script src="scripts/demos/modules/form/controllers/imageCropController.js"></script>-->
+
 	<script src="scripts/demos/modules/form/controllers/inlineEditableController.js"></script>
 	<script src="scripts/demos/modules/form/controllers/timepickerDemoController.js"></script>
-	<script src="scripts/demos/modules/gallery.js"></script>
+
+	<!--<script src="scripts/demos/modules/gallery.js"></script>-->
 	<!--<script src="scripts/demos/modules/googleMaps.js"></script>-->
-	<script src="scripts/demos/modules/horizontalLayout.js"></script>
-	<script src="scripts/demos/modules/morrisCharts.js"></script>
-	<script src="scripts/demos/modules/sparklineCharts.js"></script>
-	<script src="scripts/demos/modules/ngGrid.js"></script>
+  <!--
+  <script src="scripts/demos/modules/horizontalLayout.js"></script>
+  <script src="scripts/demos/modules/boxedLayout.js"></script>
+  -->
+  <!--<script src="scripts/demos/modules/morrisCharts.js"></script>-->
+	<!--<script src="scripts/demos/modules/sparklineCharts.js"></script>-->
+	<!--<script src="scripts/demos/modules/ngGrid.js"></script>-->
 	<script src="scripts/demos/modules/panels.js"></script>
 	<script src="scripts/demos/modules/registrationPage.js"></script>
 	<script src="scripts/demos/modules/signupPage.js"></script>
 	<script src="scripts/demos/modules/notFoundController.js"></script>
 	<script src="scripts/demos/modules/errorPageController.js"></script>
 	<script src="scripts/demos/modules/tasks.js"></script>
-	<script src="scripts/demos/modules/ui-components/uiComponents.js"></script>
-	<script src="scripts/demos/modules/ui-components/controllers/alertsController.js"></script>
-	<script src="scripts/demos/modules/ui-components/controllers/carouselController.js"></script>
-	<script src="scripts/demos/modules/ui-components/controllers/modalsController.js"></script>
-	<script src="scripts/demos/modules/ui-components/controllers/nestableController.js"></script>
-	<script src="scripts/demos/modules/ui-components/controllers/paginationsController.js"></script>
-	<script src="scripts/demos/modules/ui-components/controllers/progressbarsController.js"></script>
-	<script src="scripts/demos/modules/ui-components/controllers/ratingsController.js"></script>
-	<script src="scripts/demos/modules/ui-components/controllers/slidersController.js"></script>
-	<script src="scripts/demos/modules/ui-components/controllers/tabsController.js"></script>
-	<script src="scripts/demos/modules/ui-components/controllers/tilesController.js"></script>
-	<script src="scripts/demos/modules/dashboard.js"></script>
-	<script src="scripts/demos/demos.js"></script>
+  <script src="scripts/demos/modules/dashboard.js"></script>
+
+  <script src="scripts/demos/demos.js"></script>
 	<script src="scripts/app.js"></script>
 	  <!-- endbuild -->
 </body>
