componentes ayornado al servidor :)

--- a/web/elektron/index.html
+++ b/web/elektron/index.html
@@ -38,7 +38,7 @@
 
 	<!--<link rel="stylesheet" href="bower_components/ng-grid/ng-grid.css" />-->
 
-	<!--<link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />-->
+	<link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />
   <!--
 	<link rel="stylesheet" href="bower_components/iCheck/skins/all.css" />
   -->
@@ -224,8 +224,10 @@
 	<script src="bower_components/jqvmap/jqvmap/data/jquery.vmap.sampledata.js"></script>
 
   <script src="bower_components/ng-grid/build/ng-grid.js"></script>
+
 	<script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
-	<script src="bower_components/iCheck/icheck.min.js"></script>
+
+  <script src="bower_components/iCheck/icheck.min.js"></script>
 	<script src="bower_components/google-code-prettify/src/prettify.js"></script>
 	<script src="bower_components/bootbox.js/bootbox.js"></script>
 	<script src="bower_components/jquery-autosize/jquery.autosize.js"></script>
@@ -281,10 +283,10 @@
 	<script src="bower_components/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
 	<script src="bower_components/jquery.easy-pie-chart/dist/angular.easypiechart.js"></script>
 	<script src="bower_components/bootstrap-datepaginator/dist/bootstrap-datepaginator.min.js"></script>
-  <!--
+
 	<script src="bower_components/velocity/velocity.js"></script>
 	<script src="bower_components/velocity/velocity.ui.js"></script>
-  -->
+
 	<!-- endbower -->
 
 	<script type='text/javascript' src='assets/plugins/form-colorpicker/js/bootstrap-colorpicker.min.js'></script>
