--- a/web/elektron/index.html
+++ b/web/elektron/index.html
@@ -13,7 +13,6 @@
 	<!-- prochtml:remove:dist -->
 	<link href="assets/less/styles.less" rel="stylesheet/less" media="all">
 	<!-- /prochtml -->
-
 	<link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries. Placeholdr.js enables the placeholder attribute -->
@@ -190,6 +189,8 @@
 	<script src="bower_components/underscore/underscore.js"></script>
 	<script src="bower_components/angular/angular.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.1/ui-bootstrap-tpls.min.js"></script>
+
 	<script src="bower_components/angular-resource/angular-resource.js"></script>
 	<script src="bower_components/angular-cookies/angular-cookies.js"></script>
 	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
@@ -231,7 +232,6 @@
 	<script src="bower_components/google-code-prettify/src/prettify.js"></script>
 	<script src="bower_components/bootbox.js/bootbox.js"></script>
 	<script src="bower_components/jquery-autosize/jquery.autosize.js"></script>
-	<script src="bower_components/gmaps/gmaps.js"></script>
 	<script src="bower_components/jquery.pulsate/jquery.pulsate.js"></script>
 	<script src="bower_components/jquery.knob/js/jquery.knob.js"></script>
 	<script src="bower_components/jquery.sparkline/index.js"></script>
@@ -262,6 +262,8 @@
 	<script src="bower_components/textAngular/src/textAngularSetup.js"></script>
   -->
 	<script src="bower_components/rangy/rangy-selectionsaverestore.js"></script>
+
+  <script src="bower_components/angular-websocket/dist/angular-websocket.js"></script>
 
 	<script src="bower_components/angular-ui-grid/ui-grid.js"></script>
 	<script src="bower_components/transitionize/dist/transitionize.js"></script>
@@ -327,7 +329,6 @@
 
   <script src="scripts/chart/canvas.js"></script>
 	<script src="scripts/chart/flot.js"></script>
-  <script src="scripts/demos/modules/calendar.js"></script>
 	<script src="scripts/demos/modules/nvd3Charts.js"></script>
   <script src="scripts/demos/modules/canvasCharts.js"></script>
   <script src="scripts/demos/modules/flotCharts.js"></script>
