--- a/web/elektron/index.html
+++ b/web/elektron/index.html
@@ -356,13 +356,17 @@
 	<!--<script src="scripts/demos/modules/ngGrid.js"></script>-->
 	<script src="scripts/demos/modules/panels.js"></script>
 	<script src="scripts/demos/modules/registrationPage.js"></script>
-	<script src="scripts/demos/modules/signupPage.js"></script>
+  <script src="scripts/demos/modules/logout.js"></script>
+  <script src="scripts/demos/modules/signupPage.js"></script>
 	<script src="scripts/demos/modules/notFoundController.js"></script>
 	<script src="scripts/demos/modules/errorPageController.js"></script>
 	<script src="scripts/demos/modules/tasks.js"></script>
   <script src="scripts/demos/modules/dashboard.js"></script>
 
   <script src="scripts/demos/demos.js"></script>
+
+  <!--<script src="js/factory/loginservice.js"></script>-->
+
 	<script src="scripts/app.js"></script>
 	  <!-- endbuild -->
 </body>
