--- a/web/elektron/index.html
+++ b/web/elektron/index.html
@@ -30,7 +30,7 @@
 	<!-- build:css assets/css/vendor.css -->
 	<!-- bower:css -->
 
-	<!--<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />-->
+	<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
 
 	<!--<link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css" />-->
 	<!--<link rel="stylesheet" href="bower_components/angular-ui-tree/dist/angular-ui-tree.min.css" />-->
@@ -40,7 +40,7 @@
 	<link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />
 
 	<link rel="stylesheet" href="bower_components/iCheck/skins/all.css" />
-  
+
 
 	<link rel="stylesheet" href="bower_components/pnotify/pnotify.core.css" />
 	<link rel="stylesheet" href="bower_components/pnotify/pnotify.buttons.css" />
@@ -58,7 +58,7 @@
 
 
   <!--<link rel="stylesheet" href="bower_components/fullcalendar/fullcalendar.css" />-->
-	<!--<link rel="stylesheet" href="bower_components/switchery/dist/switchery.css" />-->
+	<link rel="stylesheet" href="bower_components/switchery/dist/switchery.css" />
 
 	<!--<link rel="stylesheet" href="bower_components/angular-meditor/dist/meditor.min.css" />-->
 	<link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css" />
@@ -365,6 +365,7 @@
 	<script src="scripts/demos/modules/errorPageController.js"></script>
 	<script src="scripts/demos/modules/tasks.js"></script>
   <script src="scripts/demos/modules/dashboard.js"></script>
+  <script src="scripts/demos/modules/monitor.js"></script>
 
   <script src="scripts/demos/demos.js"></script>
 
