tasks casi terminadas (problema con el server) - model para confimar la borrada - formularios para crear task

--- a/web/elektron/index.html
+++ b/web/elektron/index.html
@@ -325,7 +325,8 @@
 	<!--<script src="scripts/chart/sparklines.js"></script>-->
 	<!--<script src="scripts/demos/modules/editableTable.js"></script>-->
 
-<!--  <script src="scripts/chart/canvas.js"></script>
+<!--
+  <script src="scripts/chart/canvas.js"></script>
 	<script src="scripts/chart/flot.js"></script>
 	<script src="scripts/demos/modules/nvd3Charts.js"></script>
   <script src="scripts/demos/modules/canvasCharts.js"></script>
