Muchos avances en mobile. Monitor en el web y dashboard

--- a/ionic-mobile/elektron/www/index.html
+++ b/ionic-mobile/elektron/www/index.html
@@ -26,11 +26,11 @@
 
     <!-- your app's js -->
     <!--<script src="js/chart.js"></script>-->
-    <script src="js/Charts.js"></script>
+    <script src="js/lib/Charts.js"></script>
     <!--<script src="js/angular-chart.js"></script>-->
-    <script src="js/angularmin.js"></script>
-    <script src="js/angularchart.js"></script>
-    <script src="js/angular-websocket.min.js"></script>
+    <script src="js/lib/angularmin.js"></script>
+    <script src="js/lib/angularchart.js"></script>
+    <script src="js/lib/angular-websocket.min.js"></script>
 
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
