web: last data in monitor and dash

--- a/web/elektron/index.html
+++ b/web/elektron/index.html
@@ -98,7 +98,7 @@
 			  'show-infobar': getLayoutOption('rightbarCollapsed'),
 			  'show-sidebar': getLayoutOption('leftbarShown')
 			}"
-  ng-click="hideHeaderBar();hideChatBox()"
+  ng-click=""
   animate-page-content
   faux-offcanvas
   to-top-on-load
