WEB: production for CSS/LESS

--- a/web/elektron/index.html
+++ b/web/elektron/index.html
@@ -82,7 +82,7 @@
 	<!-- endbuild -->
 
 	<!-- prochtml:remove:dist -->
-	<script type="text/javascript">less = { env: 'development'};</script>
+	<script type="text/javascript">less = { env: 'production'};</script>
 	<script type="text/javascript" src="assets/plugins/misc/less.js"></script>
 	<!-- /prochtml -->
 </head>
