--- a/ionic-mobile/elektron/www/index.html
+++ b/ionic-mobile/elektron/www/index.html
@@ -36,6 +36,11 @@
     <script src="js/services.js"></script>
     <script src="js/app.js"></script>
 
+    <script src="js/lib/satellizer.js">
+    <script src="js/lib/anuglar-ui-router.js">
+
+    </script>
+
     <!-- Date picker -->
     <script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
     <link href="lib/ion-datetime-picker/release/ion-datetime-picker.min.css" rel="stylesheet">
