--- a/web/elektron/index.html
+++ b/web/elektron/index.html
@@ -208,6 +208,9 @@
   <script src="bower_components/bootstrap-select/dist/js/bootstrap-select.js"></script>
   <script src="bower_components/bootstrap-timepicker/js/bootstrap-timepicker.min.js"></script>
 
+  <script src="bower_components/satellizer/satellizer.js"></script>
+  <script src="bower_components/angular-ui-router/angular-ui-router.js"></script>
+
 <!--
 	<script src="bower_components/jquery.ui/ui/jquery.ui.draggable.js"></script>
 	<script src="bower_components/jquery.ui/ui/jquery.ui.resizable.js"></script>
