--- a/ionic-mobile/elektron/www/index.html
+++ b/ionic-mobile/elektron/www/index.html
@@ -11,10 +11,6 @@
     <link href="css/custom-app.css" rel="stylesheet">
     <link rel="stylesheet" href="css/angular-chart.css">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
-
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -33,13 +29,12 @@
     <script src="js/lib/angular-websocket.min.js"></script>
 
     <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
     <script src="js/app.js"></script>
 
-    <script src="js/lib/satellizer.js">
-    <script src="js/lib/anuglar-ui-router.js">
-
-    </script>
+    <script src="js/lib/satellizer.js"></script>
+    <!--
+    <script src="js/lib/angular-ui-router.js"></script>
+    -->
 
     <!-- Date picker -->
     <script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
@@ -47,7 +42,7 @@
 
   </head>
 
-  <body ng-app="starter" class="platform-android" >
+  <body ng-app="elektron" class="platform-android" >
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
